syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "RacingData.proto";

message GetMovieRacingDataScRsp {
	uint32 retcode = 2;
	repeated RacingData racing_data = 15;
}